Finalizando relato dos ciclos

--- a/editaveis/avaliacaoframework.tex
+++ b/editaveis/avaliacaoframework.tex
@@ -629,3 +629,51 @@ Com relação ao uso do \textit{framework}, a equipe do Laboratório Fábrica de
 \caption{Índice de Satisfação dos Desenvolvedores - \textit{Sprint} 2 do Sistema de Perícia Médica}
 \label{fig:satisfacaoPericia2}
 \end{figure}
+
+\clearpage
+
+\section{Comparativo dos Ciclos}
+
+A partir da execução de dois ciclos de pesquisa-ação foi possível perceber a mudança de opinião que as equipes de desenvolvimento apresentaram quanto à utilização do \textit{framework} de avaliação da qualidade de código.
+
+No caso do projeto do Portal, após execução do segundo ciclo de pesquisa, foi possível perceber que 100\% dos desenvolvedores passaram a concordar totalmente com o aspecto de que a manutenibilidade do código passou a melhorar após realização de inspeções (questão 5). Adicionalmente, 100\% dos desenvolvedores passaram a concordar totalmente quanto à diminuição do número de falhas percebidas pelos usuários (questão 4).
+
+A figura \ref{fig:evolucaoPortal} exibe dois gráficos comparativos, \textit{sprint} 1 e \textit{sprint} 2, que evidenciam as percepções dos desenvolvedores do Portal quanto ao uso do \textit{framework}.
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{figuras/isd_portal.png}
+\caption{Índice de Satisfação dos Desenvolvedores - Portal da Transparência - Evolução dos Ciclos}
+\label{fig:evolucaoPortal}
+\end{figure}
+
+Com relação ao projeto SICOR, a equipe de desenvolvimento apresentou percepção similar à equipe do portal quanto ao aspecto de que as inspeções se mostraram eficientes na identificação de defeitos no código (questão 1), ou seja, 100\% dos desenvolvedores das duas equipes concordaram totalmente quanto a este aspecto em ambos os ciclos de pesquisa. Adicionalmente, ao final do ciclo 2, 100\% da equipe de desenvolvimento do SICOR passou a concordar totalmente quanto ao aspecto de que os testes unitários implementados de acordo com o guia proposto pelo \textit{framework} exercitam o código de maneira eficiente (questão 2).
+
+A figura \ref{fig:evolucaoSicor} exibe dois gráficos comparativos, \textit{sprint} 1 e \textit{sprint} 2, que evidenciam as percepções dos desenvolvedores do SICOR quanto ao uso do \textit{framework}.
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{figuras/isd_sicor.png}
+\caption{Índice de Satisfação dos Desenvolvedores - SICOR - Evolução dos Ciclos}
+\label{fig:evolucaoSicor}
+\end{figure}
+
+No caso do projeto Sistema de Perícia Médica, foi notória a evolução da percepção da equipe de desenvolvimento quanto à importância das práticas de verificação de \textit{software}. Para exemplificar essa afirmação, 100\% dos desenvolvedores eram neutros, no ciclo 1, quanto à eficácia das inspeções na identificação de defeitos e da utilidade dos testes unitários (questões 1 e 2). No ciclo 2, 100\% dos desenvolvedores passaram a concordar parcialmente quanto a estes aspecto. Contudo, desde o início, 100\% da equipe concordava totalmente quanto a melhoria da manutenibilidade após realização de inspeções (questão 5).
+
+A figura \ref{fig:evolucaoPericia} exibe dois gráficos comparativos, \textit{sprint} 1 e \textit{sprint} 2, que evidenciam as percepções dos desenvolvedores do Sistema de Perícia Médica quanto ao uso do \textit{framework}.
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{figuras/isd_pericia_medica.png}
+\caption{Índice de Satisfação dos Desenvolvedores - Sistema de Perícia Médica - Evolução dos Ciclos}
+\label{fig:evolucaoPericia}
+\end{figure}
+
+\clearpage
+
+Por fim, tem-se o gráfico geral para o projeto do Sistema de Ouvidoria. Neste caso, infelizmente não ocorreu a execução do segundo ciclo, mas é possível contemplar a receptividade dos desenvolvedores do mesmo quanto ao uso do \textit{framework} em uma iteração de desenvolvimento. A figura \ref{fig:evolucaoOuvdf} exibe o cenário geral.
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{figuras/isd_ouvdf.png}
+\caption{Índice de Satisfação dos Desenvolvedores - Sistema de Ouvidoria - Ciclo 1}
+\label{fig:evolucaoOuvdf}
+\end{figure}
+
+Com base em todas as respostas coletadas, é possível perceber que não houve nenhuma resposta do tipo \"discordo totalmente\" ou \"discordo parcialmente\". O \textit{framework}, de maneira geral, teve uma excelente aceitação e mostrou-se eficiente na verificação da qualidade.
