Adicionando ajustes finais

--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -1,7 +1,7 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
 
-   The production of code and the implementation of unit tests, as well as the code inspections, are closely connected. Unit tests and inspections, as complementary software verification practices, were designed with the intention of improving the identification of defects in the software source code. In this sense, it is also worth noting that the quality of the source code influences the quality of use of the software, which is contemplated by the user. // This text still will be completed
+   Code production and implementation of unit tests, as well as code inspections, are insensitively connected. Unit tests and inspections, as complementary software verification practices, were designed with the aim of improving the identification of defects in the software source code. In this sense, it is also worth noting that the quality of the source code influences the quality of use of the software, which is contemplated by the user. Through this scenario, during the execution of the first part of the methodological plan elaborated in this study, a framework was conceived that brings together a set of activities and practices that favor the implementation of unit tests and conducting inspections correlated to the concepts of Software Engineering Based on Value, which addresses the alignment between the project's mission and the technical activities of software development. In this work, the objective is to present the evaluation of the effectiveness of the framework conceived in the first part of this study through the use of a technical procedure called action research. Two action research cycles were executed to collect the execution data of the projects adopted to use the framework. In the end, it is expected that the code quality evaluation framework is proven suitable for use in any organization that uses agile methodologies.
 
    \vspace{\onelineskip}
  
