--- a/editaveis/consideracoesfinais.tex
+++ b/editaveis/consideracoesfinais.tex
@@ -1,3 +1,13 @@
 \chapter{Considerações Finais}
 
-TO DO
+Durante a realização deste trabalho, foi possível concluir a aplicação do plano metológico de pesquisa concebido para este estudo. O \textit{framework} concebido durante a primeira parte do plano foi avaliado de acordo com os ciclos de pesquisa-ação executados nas instituições que se dispuseram a participar do estudo.
+
+Os dados obtidos por meio da execução dos ciclos ressaltaram a importância de se estabeleceer uma cultura de verificação de \textit{software} em um processo de desenvolvimento. Em todos os projetos adotados para aplicação dos conceitos propostos pelo \textit{framework}, percebeu-se a redução expressiva do número de falhas contemplado pelo usuário após entregas de \textit{releases}. Além disso, percebeu-se que as inspeções, quando bem feitas, são precisas na identificação de defeitos no código.
+
+Outro aspecto que foi evidenciado pela execução dos ciclos é que a realização de inspeções e implementação de testes unitários realmente se caracterizam como atividades complementares. No caso do Laboratório Fábrica de \textit{Software}, embora a suíte de testes unitários não tenha sido concluída ao final dos ciclos, percebeu-se que a inspeção foi capaz de identificar defeitos que poderiam, futuramente, se apresentar como uma falha a partir da utilização do sistema.
+
+A coleta de dados efetuada durante a realização deste trabalho foi desafiadora para a equipe de pesquisa. Primeiramente, é importante notar que uma das instituições, no caso a CGDF, não possuía o mínimo da base de uma cultura de verificação de \textit{software}. Felizmente, ao final dos dois ciclos, contemplou-se a excelente aceitação por parte dos integrantes da instituição. Em conversas com o diretor de tecnologia da instituição, foi dito que o uso do \textit{framework} será permanente em todos os projetos de desenvolvimento. Por outro lado, no Laboratório Fábrica de \textit{Software}, mesmo com a resistência inicial no uso do \textit{framework}, os desenvolvedores mencionaram que o \textit{framework} é promissor e pretendem se organizar melhor para tornar seu uso permanente.
+
+O procedimento técnico de pesquisa-ação também se mostrou como o mais apropriado para o contexto deste estudo. A partir da execução repetida de atividades, foi possível trabalhar uma mudança de percepção nos participantes do estudo. O único aspecto que realmente se manteve durante os ciclos foi a opinião dos desenvolvedores quanto à carga de trabalho trazida pelo uso do \textit{framework}. Contudo, conforme afirmação da equipe do projeto SICOR, havendo disciplina, até mesmo uma equipe pequena é plenamente capaz de aplicar os procedimentos elencados pelo \textit{framework}.
+
+Como futuros trabalhos, poderia ser feito um acompanhamento completo de um projeto de desenvolvimento a fim de se coletar mais dados e estabelecer análises mais aprofundadas. A partir dessas análises seria possível pesquisar e acoplar mais práticas relacionadas à verificação de \textit{software} e afirmar com mais propriedade como a qualidade de código pode ser plenamente obtida.
