--- a/editaveis/avaliacaoframework.tex
+++ b/editaveis/avaliacaoframework.tex
@@ -143,7 +143,7 @@ Taxa de Acertos por Linha de Código & 3 \\
 \label{table:tabela5}
 \end{table}
 
-A partir dos dados exibidos pela tabela, constata-se que o código foi bem implementado, tendo em vista o baixo número de defeitos identificados durante a inspeção. Adicionalmente, a suíte de testes foi capaz de exercitar, em média, 3 vezes o trecho de código sob teste.
+A partir dos dados exibidos pela tabela, constata-se que o código foi bem implementado, tendo em vista o baixo número de defeitos identificados durante a inspeção. Adicionalmente, a suíte de testes foi capaz de exercitar, em média, 3 vezes o trecho de código sob teste. A cobertura final contemplada na camada de \textit{backend} foi igual a 23,88\%.
 
 Com relação ao índice de manutenibilidade, os valores calculados são expressos na tabela \ref{table:tabela6}.
 
